--- a/src/containers/NewsList/NewsList.styl
+++ b/src/containers/NewsList/NewsList.styl
@@ -1,3 +1,20 @@
-.c-news-list {
+body{
+  padding: 0 12px
+  background-image: url(/images/page-background.png)
+  font-family: Verdana, Geneva, sans-serif
+}
 
+.c-news-list {
+  margin: 0 auto
+  max-width: 980px
+  margin-top: 100px
+
+  .container {
+    background-color: #e9eef1;
+    min-height: calc(100vh - 100px)
+  }
+
+  .news-list {
+    overflow: hidden
+  }
 }
