feat: searching using input field, loading more behaviour, responsive

--- a/src/components/SearchField/SearchField.styl
+++ b/src/components/SearchField/SearchField.styl
@@ -6,8 +6,11 @@
   justify-content: space-between
   padding: 0.5em 0.5em 0.5em 1em
   getTransition(all, 0.5s)
-  width: 500px
+  max-width: 500px
   margin: 0 auto
+  color: white
+  margin-bottom: 1em
+  font-size: 1.8em
 
   &:hover,
   &:focus {
