--- a/src/components/NewsItem/NewsItem.styl
+++ b/src/components/NewsItem/NewsItem.styl
@@ -2,31 +2,27 @@
   display: flex
   align-items: start
   background-color: #fff
-  float: left
   padding: 15px
-  margin: 20px 15px 15px
+  margin: 24px 15px 15px
   border-radius: 10px
   cursor: pointer
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.1)
   getTransition(background-color)
 
   &.active {
-    background-color: #7ba0b3
+    cursor: default
+    background-color: $grayBlue
 
     .item-description {
       opacity: 1
       max-height: 200px
     }
-
-    .item-media {
-      min-height: 140px
-    }
   }
 
   .item-media {
     font-size: 0
-    width: 225px
-    min-width: 225px
+    width: 350px
+    min-width: 350px
     overflow: hidden
     max-height: 100%
     position: relative
@@ -46,12 +42,34 @@
     transform: translateY(-50%)
   }
 
+  .item-published {
+    font-size: 12px
+    color: #d6c7ef
+    text-align: right
+    margin: 7px 0
+  }
+
+  .read-more {
+    margin-bottom: 0
+
+    a {
+      font-size: 14px
+      color: #d6c7ef
+      cursor: pointer
+
+
+      &:hover {
+        text-decoration: none
+      }
+    }
+  }
+
   .item-media img {
     width: 100%
   }
 
   .item-body {
-    padding: 0 10px
+    padding-left: 15px
     min-height: 60px
   }
 
@@ -72,12 +90,23 @@
     padding: 0
 }
 
-  @media screen and (max-width: 640px) {
+  @media screen and (max-width: 836px) {
+    .item-media {
+      width: 225px
+      min-width: 225px
+    }
+  }
+
+  @media screen and (max-width: 680px) {
     flex-direction: column
     min-height: auto
 
     .item-media {
-      height: 90px
+      min-height: 90px
+    }
+
+    .item-body {
+      margin-top: 10px
     }
 
     .item-media {
