--- a/src/containers/NewsList/NewsList.styl
+++ b/src/containers/NewsList/NewsList.styl
@@ -7,14 +7,58 @@ body{
 .c-news-list {
   margin: 0 auto
   max-width: 980px
-  margin-top: 100px
+
+  .message {
+    color: rgba(255, 255, 255, 0.8)
+    text-align: center
+    min-height: 28px
+
+    &.is-error {
+      color: #fd2929
+    }
+  }
 
   .container {
-    background-color: #e9eef1;
-    min-height: calc(100vh - 100px)
+    background-color: #e9eef1
+    min-height: calc(100vh - 166px)
   }
 
   .news-list {
     overflow: hidden
+  }
+
+  .button-wrapper {
+    padding: 15px 0 30px
+    position: relative
+
+    .c-preloader {
+      position: absolute
+      top: 33px
+      left: 0
+    }
+
+    &.is-loading {
+      .load-more-button {
+        color: transparent
+      }
+    }
+  }
+
+  .load-more-button {
+    border: 2px solid #9b4dca
+    background: $grayBlue
+    color: white
+    border-radius: 5px
+    cursor: pointer
+    outline: none
+    display: block
+    font-size: 18px
+    font-weight: 700
+    padding: 16px 45px
+    margin: 0 auto
+    text-align: center
+    text-decoration: none
+    text-transform: uppercase
+    white-space: nowrap
   }
 }
