feat: add end-to-end cypress tests, rebuild assets for github pages

--- a/src/containers/NewsList/NewsList.styl
+++ b/src/containers/NewsList/NewsList.styl
@@ -28,6 +28,13 @@ body{
     overflow: hidden
   }
 
+  .notification {
+    text-align: center
+    font-size: 28px
+    padding-top: 30px
+    font-style: italic
+  }
+
   .button-wrapper {
     padding: 15px 0 30px
     position: relative
